[package]
name = "pinset_sync_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = "1.2.0"
fork = "0.1.20"
serde = "1.0.155"
serde_derive = "1.0.155"
serde_json = "1.0.59"
reqwest = { version = "0.11.14" }
tokio = { version = "1.26.0", features = ["full"] }
futures = { version = "0.3.21"}
config = "0.13.1"